@@ -1,25 +1,0 @@
-// -*- C++ -*-
-//
-// This file is part of LHAPDF
-// Copyright (C) 2012-2013 The LHAPDF collaboration (see AUTHORS for details)
-//
-#pragma once
-
-#include <string>
-
-/* "LHAPDF version string" */
-#undef LHAPDF_VERSION
-
-// Separate int-valued macro for conditional compilation. Doesn't exist in LHAPDF5.
-// Use like "#if defined LHAPDF_MAJOR_VERSION && LHAPDF_MAJOR_VERSION == 6 ..."
-#define LHAPDF_MAJOR_VERSION 6
-
-namespace LHAPDF {
-
-
-  inline std::string version() {
-    return LHAPDF_VERSION;
-  }
-
-
-}
