@@ -1,6 +1,7 @@
 // Example program for testing the info system
 
 #include "LHAPDF/Info.h"
+#include "LHAPDF/Config.h"
 #include "LHAPDF/PDFInfo.h"
 #include "LHAPDF/PDFSet.h"
 #include "LHAPDF/Factories.h"
@@ -9,9 +10,12 @@ using namespace std;
 
 int main() {
 
-  const LHAPDF::Info cfg = LHAPDF::getConfig();
+  LHAPDF::Info& cfg = LHAPDF::getConfig();
   cout << "UndefFlavorAction: " << cfg.metadata("UndefFlavorAction") << endl;
   cout << "Verbosity: " << cfg.metadata("Verbosity") << endl;
+  cfg.setMetadata("Verbosity", 5);
+  const LHAPDF::Info& cfg2 = LHAPDF::getConfig();
+  cout << "New Verbosity from second Config: " << cfg2.metadata("Verbosity") << endl;
 
   const LHAPDF::PDFSet set("CT10nlo");
   cout << "SetDesc: " << set.metadata("SetDesc") << endl;
